# Just_a_game

./: README.md  project.c
0w/: CMakeLists.txt  compile_commands.json
0w/header/client/core/: keyboard.h  shader.h  world.h
0w/header/client/core/vertex/: vertex.h
0w/header/client/object/: camera.h
0w/header/client/screen/: pause.h
0w/header/core/: extra.h  function.h  heap.h  io.h  value.h
0w/header/server/object/: block.h  player.h
0w/resources/assets/shader/: vertices.frag  vertices.vert
0w/source/: main.c
0w/source/client/core/: keyboard.c  shader.c  world.c
0w/source/client/core/vertex/: vertex.c
0w/source/client/object/: camera.c
0w/source/client/screen/: pause.c
0w/source/core/: heap.c  io.c  print.c  string.c  value.c
0w/source/server/object/: block.c  player.c
task/: assets.bat  build.bat  build_run.bat  clean.bat  config.bat  none.bat  run.bat
